.config/Code/logs/20220114T182223/exthost1/output_logging_20220114T182226/8-Code.log
[Running] node "/home/baianor/Trybe/exercicios-TRYBE/fundamentos/bloco-07-introcucao-es6-e-testes-unitarios/7.3-jest/exercise/sum.js"

[Done] exited with code=0 in 0.063 seconds

[Running] node "/home/baianor/Trybe/exercicios-TRYBE/fundamentos/bloco-07-introcucao-es6-e-testes-unitarios/7.3-jest/exercise/sum.js"
/home/baianor/Trybe/exercicios-TRYBE/fundamentos/bloco-07-introcucao-es6-e-testes-unitarios/7.3-jest/exercise/sum.js:1
const sum = (1, 'b') => {
                ^^^

SyntaxError: Invalid destructuring assignment target
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1031:15)
    at Module._compile (node:internal/modules/cjs/loader:1065:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1153:10)
    at Module.load (node:internal/modules/cjs/loader:981:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:81:12)
    at node:internal/main/run_main_module:17:47

[Done] exited with code=1 in 0.083 seconds

[Running] node "/home/baianor/Trybe/exercicios-TRYBE/fundamentos/bloco-07-introcucao-es6-e-testes-unitarios/7.3-jest/exercise/sum.js"

[Done] exited with code=0 in 0.061 seconds

[Running] node "/home/baianor/Trybe/exercicios-TRYBE/fundamentos/bloco-07-introcucao-es6-e-testes-unitarios/7.3-jest/exercise/functions.js"
[
  { tech: 'adson', name: undefined },
  { tech: 'java', name: undefined },
  { tech: 'react', name: undefined }
]

[Done] exited with code=0 in 0.081 seconds

